# rendering_04_LearnOpenGL_in_One

./: CMakeLists.txt  README.md  build.bat  win32_conanfile.txt
src/all_in_one/: game.cpp  game.h  main.cpp
src/all_in_one/cameraSystem/: camera.cpp  camera.h  cameraSystem.cpp  cameraSystem.h
src/all_in_one/commonComponents/: color.cpp  color.h  common.h  debugScreenConfig.h  light.h  rotation.h  tags.h  transform2d.h  transform3d.h  uvScale.h
src/all_in_one/deferredShadingSystem/: deferedShadingSystem.cpp  deferredShadingSystem.h
src/all_in_one/ecs/: component.h  id.cpp  id.h  system.h  world.h
src/all_in_one/entityInitSystem/: entityInitSystem.cpp  entityInitSystem.h
src/all_in_one/finalSystem/: finalSystem.cpp  finalSystem.h
src/all_in_one/input/: cursorPos.h  input.cpp  input.h  inputStatus.h
src/all_in_one/renderers/: deferredShadingRenderer.cpp  deferredShadingRenderer.h  deferred_gbuffer.frag  deferred_gbuffer.vert  deferred_shading.frag  deferred_shading_one.frag  deferred_shading_one.vert  old_deferred_shading.frag  shadowMapDebugRenderer.cpp  shadowMapDebugRenderer.h  shadow_mapping_debug_show.frag  simpleGeometry.frag  simpleGeometry.vert  simpleGeometryRenderer.cpp  simpleGeometryRenderer.h  simpleMesh.frag  simpleMesh.vert  simpleMeshRenderer.cpp  simpleMeshRenderer.h  skyBoxRenderer.cpp  skyBoxRenderer.h  skybox.frag  sprite.frag  sprite.vert  spriteRenderer.cpp  spriteRenderer.h
src/all_in_one/resources/: material.cpp  material.h  model.cpp  model.h  resourceManager.cpp  resourceManager.h  shader.cpp  shader.h  simpleMesh.cpp  simpleMesh.h  simple_mesh_tb_cal.py  texture.cpp  texture.h  util.h  (+1 more)
src/glm_mul/: main.cpp
(+17 files in other folders)
